# agromodel

./: .gitignore  NOTAS _DISEÑO.md  README.md  SPEC.md  cell20_output.txt  cell_21_output.txt  cell_22_output.txt  cell_25_output.txt  cell_28_output.txt  cell_30_output.txt  fix_nb.py  main.py  main_training.txt  markdown_content.txt  pyproject.toml  results_30.txt  results_31.txt  results_34.txt  results_35.txt  results_36.txt  results_38.txt  training_loop.txt
.claude/: settings.local.json
api/: README.md  config.py  inference.py  main.py  schemas.py  spatial.py
app/: README.md  pubspec.yaml
docs/: LLP-Co_documento_tecnico.md  analisis_diseno_variables.md  armonizacion_espacial.md  arquitectura_inferencia.html  datos_etiquetado_target.html  diccionario_variables.md  estrategia_modelado_agroplus.md  estrategia_preparacion_datos.html  etiquetado_multiclase_14_clases.md  explicacion_variables_raw_a_vista_minable.md  infografia_pipeline.md  informe_analisis_estadistico.md  informe_vista_minable.md  modelos_ia_recomendados.html  procesamiento_conceptual.md  vista_minable_que_sembrar.html  vista_minable_variables.md
extractores/: .env.example  01_extraer_clima_ideam.py  02_extraer_chirps.py  03_extraer_suelo_igac.py  04_extraer_soilgrids.py  05_extraer_sentinel2.py  06_extraer_sentinel1.py  07_extraer_dem_topografia.py  08_extraer_target.py  09_extraer_municipios_dane.py  README.md  config.py  run_all.py
modelado/: CRISP_DM_AgroPlus.ipynb  CRISP_DM_AgroPlus_Ensemble.ipynb  CRISP_DM_AgroPlus_L1_UPRA.ipynb  CRISP_DM_AgroPlus_LLP_Co.ipynb  CRISP_DM_AgroPlus_LLP_Co_V0.ipynb  CRISP_DM_AgroPlus_LLP_Co_V1.ipynb  CRISP_DM_AgroPlus_V1.ipynb  CRISP_DM_AgroPlus_v0.ipynb  CRISP_DM_Proceso – G10.ipynb  CRISP_DM_V1.ipynb  Notebook2_MODULO1.ipynb  (+7 more)
(+33 files in other folders)
