[project]
name = "agroplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.19",
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pykrige>=1.7.3",
    "pyproj>=3.7.2",
    "pysheds>=0.5",
    "rasterio>=1.5.0",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "sentinelhub>=3.11.5",
]
