[project]
name = "agroplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "earthengine-api>=1.7.19",
    "geopandas>=1.1.3",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2,<3",
    "pykrige>=1.7.3",
    "pyproj>=3.7.2",
    "pysheds>=0.5",
    "rasterio>=1.5.0",
    "requests>=2.33.0",
    "scipy>=1.13,<1.17",
    "seaborn>=0.13.2",
    "sentinelhub>=3.11.5",
    "ydata-profiling",
]
