[project]
name = "agroplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "earthengine-api>=1.7.19",
    "geopandas>=1.1.3",
    "imbalanced-learn>=0.12",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "optuna>=3.6",
    "pandas>=2.2,<3",
    "pyarrow>=18.0",
    "pykrige>=1.7.3",
    "pyproj>=3.7.2",
    "pysheds>=0.5",
    "rasterio>=1.5.0",
    "requests>=2.33.0",
    "scikit-learn>=1.5",
    "scipy>=1.13,<1.17",
    "seaborn>=0.13.2",
    "sentinelhub>=3.11.5",
    "tabulate>=0.9",
    "xgboost>=2.1",
    "ydata-profiling",
]

[dependency-groups]
dev = [
    "setuptools<81",
    "ydata-profiling>=4.18.1",
]
